--- a/src/css/main.css
+++ b/src/css/main.css
@@ -127,11 +127,6 @@ div.modal div.modal-content {
   box-shadow: 0 4px 8px rgba(112, 112, 112, 0.2); 
 }
 
-.popup-color > p {
-  font-size: large;
-}
-
-
 
 .container-count {
   display: flex;
@@ -155,7 +150,7 @@ div.modal div.modal-content {
 .inputs input {
   width: 60px;
   padding: 10px;
-  font-size: 1.1em;
+  font-size: 20px;
   border-radius: 5px;
   border: none;
 }
@@ -168,21 +163,6 @@ div.modal div.modal-content {
   background: transparent;
   margin: 0 5px;
 }
-
-/* Footer */
-
-footer div{
-  display: flex; /* Usando flexbox para o conteúdo do footer */
-  align-items: center; /* Alinha os itens verticalmente */
-  justify-content: center; /* Centraliza os itens horizontalmente */
-  gap: 3px; /* Espaçamento entre os itens */
-}
-
-footer div p {
-  margin: 0;
-  padding: 0;
-}
-
 
 /* Chrome, Safari, Edge */
 input[type="number"]::-webkit-outer-spin-button,
@@ -199,5 +179,25 @@ input[type="number"] {
 
 /* Responsividade */
 @media (max-width: 600px) {
+  .Body-Popups {
+    justify-content: flex-start;
+    gap: 0;
+  }
 
+  .Body-Popups .upgrade .bi,
+  .Body-Popups .container-popup-color .bi{
+    font-size: 15px;
+
+    p {
+      font-size: smaller;
+    }
+  }
+
+  .container-count {
+    padding: 25vh 0vh;
+  }
+
+  .container-count #timerDisplay{
+    font-size: 55px;
+  }
 }
