--- a/src/css/main.css
+++ b/src/css/main.css
@@ -186,7 +186,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 
 /* Responsividade */
-@media (max-width: 600px) {
+@media (max-width: 400px) {
   .Body-Popups {
     justify-content: flex-end;
     gap: 0;
@@ -208,8 +208,9 @@ input[type="number"]::-webkit-inner-spin-button {
   .container-count #timerDisplay{
     font-size: 55px;
   }
-
-  div.modalUp .bi-x-circle{
-    margin-left: 68vh;
+  
+  div.modalUp div.modalUp-content button{
+    width: 15cm;
+    max-width: 885px ;
   }
 }
