--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,4 @@
 @import "bootstrap-icons/font/bootstrap-icons.css";
-@import "functions/DarkMode.css";
 
 * {
     padding: 0;
@@ -164,6 +163,7 @@ div.modal div.modal-content {
   padding: 10px;
   font-size: 20px;
   border-radius: 5px;
+  background-color: transparent;
   border: none;
 }
 
