--- a/src/css/functions/modal.css
+++ b/src/css/functions/modal.css
@@ -1,3 +1,6 @@
+/* ARQUIVO DE MODIFICAÇÕES DOS MODAIS E CONFIGURAÇÕES DOS MODAIS, COMO, DARKMODE, NOTIFICAÇÃO UPGRADE E FUTUROS MODAL'S*/
+
+
 @import "../main.css";
 
 /* Modal Up*/
