--- a/src/css/functions/modal.css
+++ b/src/css/functions/modal.css
@@ -7,7 +7,6 @@
 div.modalUp {
   display: none;
   position: fixed; 
-  z-index: 1000; 
   left: 0;
   top: 0;
   width: 100%;
@@ -23,7 +22,6 @@ div.modalUp div.modalUp-content {
   width: 90%; 
   max-width: 500px; 
   background-color: rgb(214, 214, 214);
-  box-shadow: 0 4px 8px rgba(112, 112, 112, 0.062); 
 }
 
 div.modalUp .bi-x-circle {
@@ -96,19 +94,18 @@ div.modalUp .bi-x-circle {
 div.modal {
   display: none;
   position: fixed; 
-  z-index: 1000; 
+  overflow: visible;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.116); 
   justify-content: center; 
   align-items: center; 
 }
 
 div.modal .bi-x-circle {
   display: flex;
-  max-width: 600px;
+  max-width: 20px;
   pointer-events: visible;
   background-color: rgba(179, 179, 179, 0);
   font-size: 20px;
@@ -119,16 +116,16 @@ div.modal div.modal-content {
   border-radius: 5px;
   width: 90%; 
   max-width: 500px; 
-  box-shadow: 0 4px 8px rgba(112, 112, 112, 0.2); 
 }
 
-/* Corpo do Card */
-.Body-DarkMode {
+/* Corpo dos Cards*/
+.Card {
   padding: 10px;
   border-radius: 5px;
   margin: 10px 0px;
   background-color: #e0e0e08e;
 }
+
 
 .Body-DarkMode h2 {
     font-size: 15px;
@@ -138,6 +135,8 @@ div.modal div.modal-content {
 .Body-DarkMode p {
    margin-bottom: 0;
 }
+
+
 
 /* Estilização do Botão */
 
@@ -168,8 +167,7 @@ button.btn-toggle-dark{
 .Body-Buttons-DarkMode {
     background-color: grey;
     border-radius: 30px;
-    margin: 1.5px;
-    margin-right: 365px;
+    max-width: 73px;
 } 
 
 .btn-toggle-light {
@@ -178,6 +176,23 @@ button.btn-toggle-dark{
 
 .btn-toggle-dark {
     font-size: 15px;
+}
+
+/* Pomodoro Config */
+  
+.opcoesPomo {
+  font-size: small;
+}
+
+#activatePomo {
+  border-radius: 5px;
+  padding: 5px;
+  background: #81818180;
+}
+
+#disablePomo {
+  border-radius: 5px;
+  padding: 5px;
 }
 
 /* Animações */
@@ -204,7 +219,7 @@ button.btn-toggle-dark{
 
 @media (max-width: 605px) {
   .Body-Buttons-DarkMode {
-    margin-right: 315px;
+    max-width: 73px;
 } 
   
 }
